# Animator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Animator/: CMakeLists.txt
Engine/: CMakeLists.txt
dependencies/GLAD/include/glad/: glad.h
dependencies/GLAD/src/: glad.cpp
dependencies/LibMaths/: Constants.h  Matrices.h  Vectors.h
dependencies/LibMaths/Mat3/: Mat3.h
dependencies/LibMaths/Mat4/: Mat4.h
dependencies/LibMaths/Quaternion/: Quaternion.h
dependencies/LibMaths/Vec2/: Vec2.h
dependencies/LibMaths/Vec3/: Vec3.h
dependencies/LibMaths/Vec4/: Vec4.h
include/: application.hpp  resource.hpp  shader.hpp  window.hpp
include/Application/: application.hpp  time.hpp  window.hpp
include/EngineObjects/: gameObject.hpp  gameObjectManager.hpp  transform.hpp
include/Project/: window.hpp
include/Renderer/OpenGL/: mesh.hpp  renderer.hpp  shader.hpp  texture.hpp
include/Rendering/OpenGL/: camera.hpp  mesh.hpp  renderer.hpp  shader.hpp  texture.hpp
include/Resources/: model.hpp  resource.hpp  resourceManager.hpp  task.hpp  threadpool.hpp
resources/shaders/: frag.frag  vertex.vert
src/: application.cpp  main.cpp  resource.cpp  shader.cpp  window.cpp
src/Application/: application.cpp  time.cpp  window.cpp
src/Dependencies/: glad.c
src/EngineObjects/: gameObject.cpp  gameObjectManager.cpp  transform.cpp
src/Project/Main/: main.cpp
src/Renderer/OpenGL/: mesh.cpp  renderer.cpp  shader.cpp  texture.cpp
src/Rendering/OpenGL/: camera.cpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp
src/Resources/: model.cpp  resource.cpp  resourceManager.cpp  task.cpp  threadpool.cpp
